# streamlit_example

./: app.py  model.py  pyproject.toml
