[tool.poetry]
name = "streamlit-toy"
version = "0.1.0"
description = ""
authors = ["KitriSu <yuqingsu9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.0.0"
scikit-learn = "^1.0.0"
pandas = "^1.4.0"
numpy = "^1.22.0"
altair = "^4.2.2"
vega-datasets = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
